--- a/survay-feedback/src/app/pages/admin/admin.component.html
+++ b/survay-feedback/src/app/pages/admin/admin.component.html
@@ -1,9 +1,9 @@
 <!-- start administator options --> 
 <a routerLink="/createSurveyor" class="col-sm-3">
-    <div class="panel panel-default custom-panel margin-bottom-50">
+    <div class="panel panel-default custom-panel margin-bottom-50 border-radius-0">
         <div class="panel-body text-center remove-underline"><h3><span class="glyphicon glyphicon-user"></span><br/> Surveyors</h3></div>
         <div class="divider"></div>
-        <div class="text-center">Create/Remove Surveyors</div>
+        <div class="text-center padding-5 primary">Create/Remove Surveyors</div>
     </div>
 </a>
 <!-- ends administator options --> 
