--- a/survay-feedback/src/app/pages/responder/survey-page/survey-page.component.css
+++ b/survay-feedback/src/app/pages/responder/survey-page/survey-page.component.css
@@ -6,29 +6,11 @@ a {
     padding: 24% 2%;
 }
 
-@media only screen and (max-width: 480px) {
-    #headLine {
-        padding-top: 14%;
-        margin-bottom: 10%;
-        padding-bottom: 1.5%;
-    }
-}
-
-@media only screen and (min-width: 480px) {
-    #headLine {
-        padding-top: 4%;
-        margin-bottom: 10%;
-        padding-bottom: 1.5%;
-    }
-    .custom-input{
-        height: 50px;
-        padding: 0% 5% 0% 5%;
-    }
-}
-
 .radio-btn {
     background: transparent;
     border: none;
+    color: black;
+    padding-left: 1%;
 }
 
 .required{
