--- a/survay-feedback/src/app/pages/responder/survey-page/survey-page.component.html
+++ b/survay-feedback/src/app/pages/responder/survey-page/survey-page.component.html
@@ -1,28 +1,3 @@
-<div *ngIf="success" id="successModal" class="modal fade" role="dialog">
-        <div class="modal-dialog">
-      
-          <!-- Modal content-->
-          <div class="modal-content sharp-corner">
-            <div class="modal-header primary text-center">
-              <button type="button" class="close" data-dismiss="modal">&times;</button>
-              <h4 class="modal-title">Thank You</h4>
-            </div>
-            <div class="modal-body">
-                <p><strong>Your Response Successfuly Saved.</strong></p>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            </div>
-          </div>
-      
-        </div>
-      </div>
-
-
-      
-<div class="secondary" id="headLine">
-    <div class="container"><h2>Fill Survey</h2></div>
-</div>
 <div class="container" *ngIf="survey">
         <div *ngIf="errorMessageStatus">
             <div class="{{errorMessageClass}}">
@@ -30,8 +5,8 @@
                 {{errorMessage}}
             </div>
         </div>
-        <div *ngIf="survey.status == 'LIVE' else elseBlock" class="panel panel-default">
-            <div class="panel-heading text-center">
+        <div *ngIf="survey.status == 'LIVE' else elseBlock" class="panel panel-default margin-bottom-10">
+            <div class="panel-heading">
                 <span><h2>{{survey.name}}</h2></span>
             </div>
             <div class="panel-body">
@@ -43,11 +18,11 @@
                                 <h4 class="panel-heading inline-show">{{i+1}}.&nbsp; <span [froalaView]="question.text"></span><span *ngIf="question.required" class="required">*</span><span *ngIf="isSubmited && surveyForm.controls.response.controls[i].errors">(Question in mandatory)</span></h4>
                                 <div formArrayName="response">
                                     <div *ngFor="let option of question.options; let j=index">
-                                        <div class="input-group">
-                                            <span class="input-group-addon radio-btn">
+                                        <div class="radio radio-btn">
+                                            <label>
                                                 <input type="radio" value="{{option.id}}" [formControlName]="i" >
-                                            </span>
-                                            <div [froalaView]="option.text"></div>
+                                                <div [froalaView]="option.text"></div>
+                                            </label>
                                         </div>
                                     </div>
                                 </div>
@@ -60,7 +35,7 @@
                             </div>  -->
                         </div>
                     </div>
-                    <button mat-raised-button class="success-btn float-right" data-toggle="modal" data-target="#successModal"
+                    <button mat-raised-button class="success-btn float-right"
                     (click)="isSubmited = true;submitSurvey();">Submit</button>
                 </form>
             </div>
