--- a/survay-feedback/src/app/pages/survey-result/view-survey-result/view-survey-result.component.css
+++ b/survay-feedback/src/app/pages/survey-result/view-survey-result/view-survey-result.component.css
@@ -2,28 +2,9 @@ a {
     text-decoration: none;
 }
 
-@media only screen and (max-width: 480px) {
-    #headLine {
-        padding-top: 14%;
-        margin-bottom: 10%;
-        padding-bottom: 1.5%;
-    }
-}
-
-@media only screen and (min-width: 480px) {
-    #headLine {
-        padding-top: 4%;
-        margin-bottom: 10%;
-        padding-bottom: 1.5%;
-    }
-    .custom-input{
-        height: 50px;
-        padding: 0% 5% 0% 5%;
-    }
-}
-
 .btn-small {
     width: 10%;
+    margin-bottom: 20px;
 }
 
 .btn-medium{
@@ -35,20 +16,10 @@ a {
     display: flex;
 }
 
-.refresh {
-    width: 10%;
-    background-color: white;
-    color: black;
+.canvas {
+    height: 200px;
 }
 
-.refresh:hover {
-    background-color: #ddd;
-}
-
-#pie{ 
-    height: 300px;
-}
-
-#bar{
-    height: 300px;
+.draw-chart{
+    min-height: 400px;
 }
