--- a/survay-feedback/src/app/pages/surveyor/surveyor.component.html
+++ b/survay-feedback/src/app/pages/surveyor/surveyor.component.html
@@ -1,16 +1,16 @@
 <span>
     <a routerLink="/manageSurveys" class="col-sm-3">
-        <div class="panel panel-default custom-panel margin-bottom-50">
+        <div class="panel panel-default custom-panel margin-bottom-50 border-radius-0">
             <div class="panel-body text-center remove-underline"><h3><span class="glyphicon glyphicon-list-alt"></span><br/> Surveys</h3></div>
             <div class="divider"></div>
-            <div class="text-center">Manage Surveys</div>
+            <div class="text-center padding-5 primary">Manage Surveys</div>
         </div>
     </a>
     <a routerLink="/createSurvey" class="col-sm-3">
-        <div class="panel panel-default custom-panel margin-bottom-50">
+        <div class="panel panel-default custom-panel margin-bottom-50 border-radius-0">
             <div class="panel-body text-center remove-underline"><h3><span class="glyphicon glyphicon-pencil"></span><br/> Create Survey</h3></div>
             <div class="divider"></div>
-            <div class="text-center">Create Surveys</div>
+            <div class="text-center padding-5 primary">Create Surveys</div>
         </div>
     </a>
 </span>
