--- a/survay-feedback/src/app/pages/dashboard/dashboard.component.css
+++ b/survay-feedback/src/app/pages/dashboard/dashboard.component.css
@@ -2,28 +2,8 @@ a {
     text-decoration: none;
 }
 
-.custom-panel {
-    padding: 24% 2%;
-}
+.panel-footer{
 
-@media only screen and (max-width: 480px) {
-    #headLine {
-        padding-top: 14%;
-        margin-bottom: 10%;
-        padding-bottom: 1.5%;
-    }
-}
-
-@media only screen and (min-width: 480px) {
-    #headLine {
-        padding-top: 4%;
-        margin-bottom: 10%;
-        padding-bottom: 1.5%;
-    }
-}
-.content{
-    margin-left: 10%;
-    width:90%;
 }
 
 .full-content{
