--- a/survay-feedback/src/app/pages/dashboard/dashboard.component.html
+++ b/survay-feedback/src/app/pages/dashboard/dashboard.component.html
@@ -1,11 +1,6 @@
-<side-navbar></side-navbar>
-<div class="content">
-<div class="secondary" id="headLine">
-    <div class="container"><h2>Dashboard</h2></div>
-</div>
 <div class="container">
     
-    <div class="row">
+    <div class="row"> 
         <div [ngSwitch]="user.role"> 
             <!-- Administrator Component starts -->
             <span *ngSwitchCase="1"><admin-content></admin-content></span>
@@ -23,14 +18,13 @@
         <!-- Show only if user have a viewer also -->
         <span *ngIf="user.viewer; else elseBlock">
             <a routerLink="/surveyResults" class="col-sm-3">
-                <div class="panel panel-default custom-panel margin-bottom-50">
+                <div class="panel panel-default margin-bottom-50 border-radius-0">
                     <div class="panel-body text-center remove-underline"><h3><span class="glyphicon glyphicon-stats"></span><br/> Survey Results</h3></div>
                     <div class="divider"></div>
-                    <div class="text-center">View survey results</div>
+                    <div class="text-center padding-5 primary">View survey results</div>
                 </div>
             </a>
         </span>
         
     </div>
-</div>
 </div>
