--- a/survay-feedback/src/app/pages/forgot-password/forgot-password.component.html
+++ b/survay-feedback/src/app/pages/forgot-password/forgot-password.component.html
@@ -3,6 +3,7 @@
                 <div class="row">
                 <div class="col-sm-4"></div>
                 <div class="col-sm-4 box">
+                    
                     <div class="panel panel-default">
                         <div class="panel-body">Forgot Password</div>
                     </div>
@@ -17,13 +18,24 @@
                     <div *ngIf="loadingData" class="alert alert-info flipInX animated">
                         <span class="glyphicon glyphicon-repeat loader"></span> Processing... Please wait
                     </div>
-                    <form>
+                    <div *ngIf="!rForm.controls['email'].valid && rForm.controls['email'].touched"
+                    class="alert alert-danger">
+                        <div *ngIf="rForm.controls['email'].errors.required">
+                            Email is required.
+                        </div>
+                        <div *ngIf="rForm.controls['email'].errors.pattern">
+                            Please enter valid email.
+                        </div>
+                    </div>
+                    <form [formGroup]="rForm">
                         <div class="form-group">
                             <label for="email">Email:</label>
-                            <input type="text" class="form-control" id="email" name="email" #email />
+                            <!-- <input type="text" formControlName="email" class="form-control" id="email" name="email" #email /> -->
+                            <input type="text" formControlName="email" class="form-control" id="email" />
                         </div> 
                         <div class="form-group margin-top-5 text-center">
-                            <button  class="btn btn-success" (click)="recoverPassword(email.value);" >Recover</button>
+                            <button  [disabled]="!rForm.valid" class="btn btn-success" (click)="recoverPassword();" >Recover</button>
+                            <!-- <button  class="btn btn-success" (click)="recoverPassword(email.value);" >Recover</button> -->
                         </div>
                     </form>
                             
