--- a/survay-feedback/src/app/pages/not-found/not-found.component.html
+++ b/survay-feedback/src/app/pages/not-found/not-found.component.html
@@ -8,7 +8,7 @@
               <div class="col-sm-8">
                   <div class="panel panel-default margin-bottom-10">
                       <div class="progress">
-                        <div class="panel-heading progress-bar progress-bar-success progress-bar-striped active" role="progressbar"
+                        <div class="panel-heading progress-bar progress-bar-success" role="progressbar"
                         aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width:100%;background-color:#009cdb;"></div>
                       </div>
                       <div class="panel-body text-center" id="table-panel">
