--- a/survay-feedback/src/app/pages/responder/previous-responses/previous-responses.component.html
+++ b/survay-feedback/src/app/pages/responder/previous-responses/previous-responses.component.html
@@ -1,6 +1,3 @@
-<div class="secondary" id="headLine">
-    <div class="container"><h2>Filled Surveys</h2></div>
-</div>
 <div class="container">
     <div class="row">
                 <div class="col-sm-2"></div>
@@ -13,18 +10,8 @@
                             </a>
                         </div>
                     </div>
-                    <ng-template #EmptySurveyList>
-                        <div class="panel panel-default margin-bottom-10">
-                            <div class="panel-heading"></div>
-                            <div class="panel-body text-center" id="table-panel">
-                                <h1>OOPS!!</h1>
-                                <h1>You don't have any filled surveys.</h1>
-                                <p><img src="./assets/oops.png" width="150px" height="150px"/></p>
-                            </div>
-                        </div>
-                    </ng-template>
-                    <div class="panel panel-default margin-bottom-10" *ngIf="surveyList && surveyList.length !== 0 else EmptySurveyList">
-                        <div class="panel-heading"><h3>Survey List <input type="text" class="form-control pull-right custom-input sharp-corner" [(ngModel)]="name" placeholder="Search Surveys"></h3></div>
+                    <div class="panel panel-default margin-bottom-10">
+                        <div class="panel-heading"><h3>Survey List <input *ngIf="resultFetched && surveyList.length !== 0" type="text" class="form-control pull-right custom-input sharp-corner" [(ngModel)]="name" placeholder="Search Surveys"></h3></div>
                         <div class="panel-body" id="table-panel">
                             <div *ngIf="!resultFetched" id="loading">
                                     <div id="ball-1" class="circle"></div>
@@ -32,7 +19,7 @@
                                     <div id="ball-3" class="circle"></div>
                             </div>
                         
-                        <table class="table " *ngIf="resultFetched">
+                        <table class="table " *ngIf="resultFetched && surveyList.length !== 0">
                             <thead>
                                 <tr class="pointer">
                                 <th [class]="order === 'id'"
@@ -58,13 +45,21 @@
                                 </tr>
                             </tbody>
                         </table>
+
+                        
+                        <div *ngIf="resultFetched && surveyList.length == 0">
+                            <div class="text-center">
+                                <h1>OOPS!!</h1>
+                                <h1>You don't have any filled surveys.</h1>
+                                <p><img src="./assets/oops.png" width="150px" height="150px"/></p>
+                            </div>
+                        </div>
                     </div>
                     <div class="panel-footer text-center">
-                        <pagination-controls *ngIf="resultFetched" (pageChange)="p = $event"></pagination-controls>
+                        <pagination-controls *ngIf="resultFetched && surveyList.length !== 0" (pageChange)="p = $event"></pagination-controls>
                     </div>
                 </div>
                 </div>
                 <div class="col-sm-2"></div>
     </div>
 </div>
-<side-navbar></side-navbar>
