--- a/survay-feedback/src/app/pages/responder/survey-response/survey-response.component.css
+++ b/survay-feedback/src/app/pages/responder/survey-response/survey-response.component.css
@@ -2,26 +2,6 @@ a {
     text-decoration: none;
 }
 
-@media only screen and (max-width: 480px) {
-    #headLine {
-        padding-top: 14%;
-        margin-bottom: 10%;
-        padding-bottom: 1.5%;
-    }
-}
-
-@media only screen and (min-width: 480px) {
-    #headLine {
-        padding-top: 4%;
-        margin-bottom: 10%;
-        padding-bottom: 1.5%;
-    }
-    .custom-input{
-        height: 50px;
-        padding: 0% 5% 0% 5%;
-    }
-}
-
 .btn-small {
     width: 10%;
 }
@@ -39,4 +19,7 @@ a {
 
 .inline-show{
     display: flex;
+}
+.font-size-glyph{
+    font-size: 18px;
 }
