--- a/survay-feedback/src/app/pages/side-navbar/side-navbar.component.css
+++ b/survay-feedback/src/app/pages/side-navbar/side-navbar.component.css
@@ -1,32 +1,32 @@
-.sidenav {
-    height: 100%;
-    width: 200px;
-    position: fixed;
-    z-index: 1;
-    top: 5%;
-    left: 0;
-    background-color: #f5f5f5;
-    box-shadow: 2px 2px 2px 2px rgba(0,0,0,0.4);
-    overflow-x: hidden;
-    padding-top: 20px;
-}
-
-.sidenav a {
-    padding: 6px 6px 6px 32px;
-    text-decoration: none;
-    color: #009cdb;
-    display: block;
-    font-size: 15px;
-}
-
-.sidenav a:hover {
-    background: #444b5c;
-    color: #f1f1f1;
-}
-
-.main {
-    margin-left: 200px; 
-}
+@media only screen and (max-width: 480px) {
+    .container{
+      margin-top: 9%;  
+    }
+    #subnav {
+        margin-bottom: 5%;
+        padding: 0.5% 0 0.5% 0;
+    }
+  }
+  
+  @media only screen and (min-width: 480px) and (max-width: 768px) {
+    .container{
+      margin-top: 3%;
+      margin-bottom: 10%;  
+      
+    }
+    #subnav {
+        margin-bottom: 5%;
+        padding: 0.5% 0 0.5% 0;
+    }
+  }
+  
+  @media only screen and (min-width: 767px) {
+    #subnav {
+        margin-bottom: 5%;
+    padding: 0.5% 0 0.5% 0;
+    }
+  }
+  
 
 @media screen and (max-height: 450px) {
   .sidenav {padding-top: 15px;}
@@ -38,3 +38,16 @@
     color: #f1f1f1;
 }
 
+a{
+    text-decoration: none;
+    color: #444B5C;
+}
+
+a:hover {
+    color: #337ab7;
+    font-weight: bold;
+}
+
+#subnav {
+    background-color: white;
+}
