--- a/survay-feedback/src/app/pages/signup/signup.component.html
+++ b/survay-feedback/src/app/pages/signup/signup.component.html
@@ -14,12 +14,15 @@
                                 <span class="glyphicon glyphicon-ok form-control-feedback" [ngClass]="{'glyphicon-ok': !rForm.controls['name'].errors , 'glyphicon-remove': rForm.controls['name'].errors && rForm.controls['name'].touched}"></span>
                                 
                                 <div *ngIf="!rForm.controls['name'].valid && rForm.controls['name'].touched"
-                                class="alert alert-danger">
+                                class="custom-alert custom-alert-danger">
                                     <div *ngIf="!rForm.controls['name'].errors.required && rForm.controls['name'].errors.whitespace">
                                         Name must be valid
                                     </div>
                                     <div *ngIf="rForm.controls['name'].errors.required">
                                         Name is required
+                                    </div>
+                                    <div *ngIf="rForm.controls['name'].errors.maxlength">
+                                            Name length must be less than 100
                                     </div>
                                 </div>  
                             </div>
@@ -30,7 +33,7 @@
                                 <span class="glyphicon glyphicon-ok form-control-feedback" [ngClass]="{'glyphicon-ok': !rForm.controls['email'].errors , 'glyphicon-remove': rForm.controls['email'].errors && rForm.controls['email'].touched}"></span>
                                 
                                 <div *ngIf="!rForm.controls['email'].valid && rForm.controls['email'].touched"
-                                class="alert alert-danger">
+                                class="custom-alert custom-alert-danger">
                                     <div *ngIf="rForm.controls['email'].errors.required">
                                         Email is required
                                     </div>
@@ -45,7 +48,7 @@
                                 <span class="glyphicon glyphicon-ok form-control-feedback" [ngClass]="{'glyphicon-ok': !rForm.controls['password'].errors , 'glyphicon-remove': rForm.controls['password'].errors && rForm.controls['password'].touched}"></span>
                                 
                                 <div *ngIf="!rForm.controls['password'].valid && rForm.controls['password'].touched"
-                                class="alert alert-danger">
+                                class="custom-alert custom-alert-danger">
                                     <div *ngIf="!rForm.controls['password'].errors.minlength && !rForm.controls['password'].errors.required && rForm.controls['password'].errors.whitespace">
                                         Invalid password
                                     </div>
@@ -65,7 +68,7 @@
                                     <span class="glyphicon glyphicon-ok form-control-feedback" [ngClass]="{'glyphicon-ok': !rForm.controls['confpassword'].errors , 'glyphicon-remove': rForm.controls['confpassword'].errors && rForm.controls['confpassword'].touched}"></span>
                                     
                                     <div *ngIf="rForm.controls['password'].valid && !rForm.controls['confpassword'].valid && rForm.controls['confpassword'].touched"
-                                    class="alert alert-danger">
+                                    class="custom-alert custom-alert-danger">
                                         <div *ngIf="rForm.controls['confpassword'].errors.matchOther">
                                             Password does not match
                                         </div>
@@ -73,11 +76,11 @@
                             </div>      
                             <div class="form-group has-success has-feedback" [ngClass]="{'has-error': rForm.controls['dob'].errors && rForm.controls['dob'].touched , 'has-success': !rForm.controls['dob'].errors}">
                                 <label for="dob">DOB:</label>
-                                <input  [(ngModel)]="user.dob" formControlName="dob" type="date" max="2017-12-31" class="form-control" id="dob">
+                                <input  [(ngModel)]="user.dob" formControlName="dob" type="date" max="2017-11-21" class="form-control" id="dob">
                                 <span class="glyphicon glyphicon-ok form-control-feedback" [ngClass]="{'glyphicon-ok': !rForm.controls['dob'].errors , 'glyphicon-remove': rForm.controls['dob'].errors && rForm.controls['dob'].touched}"></span>
 
                                 <div *ngIf="!rForm.controls['dob'].valid && rForm.controls['dob'].touched"
-                                class="alert alert-danger">
+                                class="custom-alert custom-alert-danger">
                                     <div *ngIf="rForm.controls['dob'].errors.required">
                                         DOB is required
                                     </div>
@@ -96,7 +99,7 @@
                                 </label>
                                 
                                 <div *ngIf="!rForm.controls['gender'].valid && rForm.controls['gender'].touched"
-                                class="alert alert-danger">
+                                class="custom-alert custom-alert-danger">
                                     <div *ngIf="rForm.controls['gender'].errors.required">
                                         Gender is required
                                     </div>
