--- a/survay-feedback/src/app/pages/surveyor/view-survey/view-created-survey.component.html
+++ b/survay-feedback/src/app/pages/surveyor/view-survey/view-created-survey.component.html
@@ -1,6 +1,3 @@
-<div class="secondary" id="headLine">
-        <div class="container">{{survey.name}}</div>
-    </div>
     <div class="container">
         
         <div class="row">
@@ -15,8 +12,15 @@
                         <div class="panel panel-default margin-bottom-10">
                             <div class="panel-heading"><h2>{{survey.name}}
                                 <a class="btn btn-primary pull-right btn-medium flipInX animated" data-toggle="modal" data-target="#createViewerModal" (click)="onSelect(survey)" [class.selected]="survey === selectedSurvey" ><span class="glyphicon glyphicon-share-alt"></span> Share Result</a> <a [routerLink]="['/editSurvey', survey.id ]" class="btn btn-primary pull-right btn-small flipInX animated" ><span class="glyphicon glyphicon-pencil"></span> Edit</a> 
-                            </h2></div>
+                            </h2>
+                        </div>
                             <div class="panel-body" id="table-panel">
+                                <div>
+                                    <h4><b>Description: </b> {{survey.description}} </h4>
+                                </div>
+                                <div>
+                                    <h4><b>Labels: </b> <span *ngFor="let label of survey.labels"><span  class="label label-default primary">{{label}}</span> </span></h4><hr/>
+                                </div>
                                 <div *ngFor="let question of survey.questions; let i= index">
                                     <h3 class="inline-show" >{{i+1}}.&nbsp; <div [froalaView]="question.text"></div></h3>
                                     <div class="inline-show" *ngFor="let option of question.options; let j= index">
@@ -29,11 +33,6 @@
             </div>
             <div class="col-sm-2"></div>
         </div>
-    
-    
-    
-    
-        
     </div>
 
     <div *ngIf="selectedSurvey" id="createViewerModal" class="modal fade" role="dialog">
@@ -52,7 +51,7 @@
                                     <thead>
                                         <tr>
                                         <th>Name</th>
-                                        <th class="text-right">Surveyor Status</th>
+                                        <th class="text-right">Viewer Status</th>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -62,12 +61,12 @@
                                         
                                         <td class="text-right"> 
                                             <div  *ngIf="user.surveyViewer else elseBlock">
-                                                <button type="button" class="btn btn-lg btn-secondary btn-toggle  active" data-toggle="button" aria-pressed="true" autocomplete="off" (click)="createOrRemoveViewer(user)" id="uid{{user.id}}" >
+                                                <button type="button" class="btn btn-lg btn-secondary btn-toggle  active" data-toggle="button" aria-pressed="true" autocomplete="off" (click)="createOrRemoveViewer(user)" id="uid{{user.id}}" title="Remove/Create viewer">
                                                     <div class="handle"></div>
                                                 </button>
                                             </div>
                                             <ng-template #elseBlock>
-                                                <button type="button" class="btn btn-lg btn-secondary btn-toggle" data-toggle="button" aria-pressed="true" autocomplete="off"  (click)="createOrRemoveViewer(user)" id="uid{{user.id}}">
+                                                <button type="button" class="btn btn-lg btn-secondary btn-toggle" data-toggle="button" aria-pressed="true" autocomplete="off"  (click)="createOrRemoveViewer(user)" id="uid{{user.id}}" title="Remove/Create viewer">
                                                     <div class="handle"></div>
                                                 </button>
                                             </ng-template>
