--- a/survay-feedback/src/styles.css
+++ b/survay-feedback/src/styles.css
@@ -42,9 +42,36 @@ body {
     overflow-y: scroll;
     position: relative;
     margin: 0;
-    padding-bottom: 6rem;
     min-height: 100%;
 }
+
+@media only screen and (max-width: 480px) {
+  .container{
+    margin-top: 9%;  
+  }
+  #headLine {
+      padding-top: 5%;
+      padding-bottom: 1.5%;
+  }
+}
+
+@media only screen and (min-width: 480px) and (max-width: 768px) {
+  .container{
+    margin-top: 3%;  
+  }
+  #headLine {
+      padding-top: 4%;
+      padding-bottom: 1.5%;
+  }
+}
+
+@media only screen and (min-width: 767px) {
+  #headLine {
+      padding-top: 4%;
+      padding-bottom: 1.5%;
+  }
+}
+
 
 .primary {
     background: #009cdb;
@@ -61,7 +88,7 @@ body {
   }
 
   .margin-bottom-50 {
-    margin-bottom: 50%;
+    margin-bottom: 25%;
   }
 
 .btn-success {
@@ -82,7 +109,7 @@ body {
 
 .divider {
     border-bottom : 1px solid #cccccc; 
-    margin: 5% 0% 2% 0%;
+    margin: 5% 0% 0% 0%;
 }
 
 .divider-2 {
@@ -293,3 +320,106 @@ body {
 .large {
     width : 100%;
   }
+
+  .box {
+    margin-top : 7%;
+    background : white;
+    width:30%;
+    margin-left:35%;
+    margin-right:35%;
+  }
+    
+  
+  @media only screen and (max-width: 480px) {
+    .google{
+      margin-bottom: 1%;
+    }
+    .box {
+      margin-top : 20%;
+      background : white;
+      padding-bottom: 3%;
+      width:90%;
+      margin-left:5%;
+      margin-right:5%;
+    }
+  }
+
+@media only screen and (min-width:600px) and (max-width:961px) {
+  .box {
+    margin-top : 20%;
+    background : white;
+    /*box-shadow: 0px 0px 10px rgba(0,0,0,0.5);*/
+    padding-bottom: 3%;
+    width:50%;
+    margin-left:25%;
+    margin-right:25%;
+  }
+}
+
+.cursorpointer {
+  cursor: pointer;
+}
+
+.model-cancel-button{
+  opacity: 1;
+  color: white;
+}
+
+button.close{
+  opacity: 1;
+  color: white;
+}
+
+.margin-right-1{
+  margin-right : 1%;
+}
+
+.refresh {
+  width: 10%;
+  background-color: white;
+  color: black;
+}
+
+.refresh:hover {
+  background-color: #ddd;
+}
+
+.loader {
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+.custom-alert-danger {
+  color: #a94442;
+  background: none;
+  position: absolute;
+  width: 100%;
+}
+
+.custom-alert {
+  padding: 0;
+  margin-bottom: 0px;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  font-size: small;
+  text-align: right;
+}
+
+.border-radius-0{
+  border-radius: 0%;
+}
+
+div a[target=_blank]{
+  display : none !important;
+ }
+
+ .tw{
+  line-height: 1.5em;
+    height: 3em;
+    overflow: hidden;
+    text-overflow: ellipsis;
+ }
